--- a/trunk/gelman/media/css/style.css
+++ b/trunk/gelman/media/css/style.css
@@ -84,11 +84,35 @@ h1 {
 	padding-bottom: 5px;
 	font-weight: bold;
 	color: #0d3f74;
-	border-bottom: solid 1px #aaaabd;
+	border-bottom: solid 1px #0d3f74;
 }
 
 /* Brief 
 ---------------------------------------------------------*/
-.brief h3 { color:#009966; font-size: 100%; }
-.brief dd { border-bottom: 1px solid #ccc; }
+.brief { font-size: 75%; }
+.brief h3 { font-size: 90%; }
+.brief dl { border-bottom: 1px solid #ccc; }
+.brief dd { 
+	padding-left: 40px;
+}
+.brief dt img { 
+	border: 1px solid #ccc; 
+}
+.brief p { line-height: 0.8em; }
 
+/* Detail
+---------------------------------------------------------*/
+.detail { font-size: 75%; }
+.detail h2 { 
+	font-size: 150%; 
+	color: #0d3f74;
+}
+.detail h3 { font-size: 100%; }
+.detail dd { 
+	padding-left: 120px;
+}
+.detail dt img { 
+	border: 1px solid #ccc; 
+}
+.detail dd p { line-height: 0.8em; }
+.detail dl { clear: all; }
