--- a/trunk/gelman/media/css/style.css
+++ b/trunk/gelman/media/css/style.css
@@ -11,6 +11,8 @@ a:hover {
 	color:#237898;
 }
 
+.hide { display: none; }
+
 /* Header 
 ---------------------------------------------------------*/
 h1 {
