Could not find dojo.style, using dojo.byId instead.

--- a/gelman/media/css/style.css
+++ b/gelman/media/css/style.css
@@ -11,6 +11,8 @@ a:hover {
 	color:#237898;
 }
 
+.hide { display: none; }
+
 /* Header 
 ---------------------------------------------------------*/
 h1 {
